--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "tailwindcss": "^3.2.1",
     "vite": "^3.1.8",
     "vite-plugin-live-reload": "^3.0.1"
+  },
+  "dependencies": {
+    "boxicons": "^2.1.4",
+    "sass": "^1.56.1"
   }
 }
